[gd_scene load_steps=2 format=3 uid="uid://tree_castle_td"]

[ext_resource type="Script" path="res://src/ui/tower_defense/tree_castle_td.gd" id="1_script"]

[node name="TreeCastleTD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.25, 0.18, 0.98)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 16.0
offset_right = -20.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.92, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "나무성 방어전"
horizontal_alignment = 1

[node name="HUD" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GoldLabel" type="Label" parent="VBox/HUD"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "골드: 80"

[node name="WaveLabel" type="Label" parent="VBox/HUD"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "웨이브: 0/5"

[node name="LivesLabel" type="Label" parent="VBox/HUD"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.55, 0.45, 1)
theme_override_font_sizes/font_size = 18
text = "생명: 10"

[node name="MainHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TowerButtons" type="VBoxContainer" parent="VBox/MainHBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="ArrowTowerBtn" type="Button" parent="VBox/MainHBox/TowerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "화살탑 (20G)"

[node name="CannonTowerBtn" type="Button" parent="VBox/MainHBox/TowerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "대포탑 (35G)"

[node name="HeavyCannonTowerBtn" type="Button" parent="VBox/MainHBox/TowerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "중대포탑 (65G)"

[node name="SlowTowerBtn" type="Button" parent="VBox/MainHBox/TowerButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "둔화탑 (30G)"

[node name="GameArea" type="ColorRect" parent="VBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(600, 380)
color = Color(0.1, 0.18, 0.12, 1)

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartWaveButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "웨이브 시작"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "돌아가기"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "게임 방법"

[node name="ResultPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="ResultPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="ResultPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResultLabel" type="Label" parent="ResultPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "승리!"
horizontal_alignment = 1

[node name="RewardLabel" type="Label" parent="ResultPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "+30 골드"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="ResultPanel/Margin/VBox"]
layout_mode = 2
text = "다시 하기"

[node name="BackFromResultButton" type="Button" parent="ResultPanel/Margin/VBox"]
layout_mode = 2
text = "돌아가기"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -160.0
offset_right = 220.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "타워를 배치하고 웨이브를 막아보세요."
autowrap_mode = 3

[node name="CloseHelpBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
text = "닫기"
